// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes should be in the correct format in development 1`] = `
Array [
  Object {
    "component": [Function],
    "exact": true,
    "icon": "Apphub",
    "key": "home",
    "meta": Object {
      "desc": "Central location for CDT ODI applications",
      "keywords": "App, Hub",
      "title": "App Hub",
    },
    "name": "App Hub",
    "path": "/",
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Paas",
    "key": "paas",
    "meta": Object {
      "desc": "Personal Authorization Access System",
      "keywords": "tracking, access, authorization",
      "title": "PAAS",
    },
    "name": "PAAS",
    "path": "/paas",
    "roles": Array [
      "PAAS Manager",
      "PAAS HR Admin",
      "PAAS Security Admin",
    ],
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Spa",
    "key": "spa",
    "meta": Object {
      "desc": "Security Policy Acknowledgement",
      "keywords": "SPA",
      "title": "SPA",
    },
    "name": "SPA",
    "path": "/spa",
  },
  Object {
    "href": "https://cold.govops.ca.gov/",
    "icon": "COLD",
    "key": "cold",
    "meta": Object {
      "desc": "",
      "keywords": "",
      "title": "COLD",
    },
    "name": "COLD",
  },
  Object {
    "href": "http://bars.technology.ca.gov/",
    "icon": "BARS",
    "key": "bars",
    "meta": Object {
      "desc": "Badge Access Request System",
      "keywords": "badge, employee, new, student, request",
      "title": "BARS",
    },
    "name": "BARS",
  },
  Object {
    "href": "http://employeedirectory/",
    "icon": "ED",
    "key": "ed",
    "meta": Object {
      "desc": "Employee Directory",
      "keywords": "Employee, Directory, Lookup",
      "title": "ED",
    },
    "name": "ED",
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Demo",
    "key": "demo",
    "meta": Object {
      "desc": "Demo Description",
      "keywords": "Demo Keyword 1, Demo Keyword 2",
      "title": "Demo Title",
    },
    "name": "Demo",
    "path": "/demo",
  },
  Object {
    "component": [Function],
    "icon": "Loading",
    "key": "loading",
    "meta": Object {
      "desc": "test...",
      "keywords": "test, loading",
      "title": "TEST LOADING",
    },
    "name": "Test App Loading",
    "path": "/loading",
  },
]
`;

exports[`routes should be in the correct format in development 2`] = `
Array [
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Paas",
    "key": "paas",
    "meta": Object {
      "desc": "Personal Authorization Access System",
      "keywords": "tracking, access, authorization",
      "title": "PAAS",
    },
    "name": "PAAS",
    "path": "/paas",
    "roles": Array [
      "PAAS Manager",
      "PAAS HR Admin",
      "PAAS Security Admin",
    ],
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Spa",
    "key": "spa",
    "meta": Object {
      "desc": "Security Policy Acknowledgement",
      "keywords": "SPA",
      "title": "SPA",
    },
    "name": "SPA",
    "path": "/spa",
  },
  Object {
    "href": "https://cold.govops.ca.gov/",
    "icon": "COLD",
    "key": "cold",
    "meta": Object {
      "desc": "",
      "keywords": "",
      "title": "COLD",
    },
    "name": "COLD",
  },
  Object {
    "href": "http://bars.technology.ca.gov/",
    "icon": "BARS",
    "key": "bars",
    "meta": Object {
      "desc": "Badge Access Request System",
      "keywords": "badge, employee, new, student, request",
      "title": "BARS",
    },
    "name": "BARS",
  },
  Object {
    "href": "http://employeedirectory/",
    "icon": "ED",
    "key": "ed",
    "meta": Object {
      "desc": "Employee Directory",
      "keywords": "Employee, Directory, Lookup",
      "title": "ED",
    },
    "name": "ED",
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Demo",
    "key": "demo",
    "meta": Object {
      "desc": "Demo Description",
      "keywords": "Demo Keyword 1, Demo Keyword 2",
      "title": "Demo Title",
    },
    "name": "Demo",
    "path": "/demo",
  },
  Object {
    "component": [Function],
    "icon": "Loading",
    "key": "loading",
    "meta": Object {
      "desc": "test...",
      "keywords": "test, loading",
      "title": "TEST LOADING",
    },
    "name": "Test App Loading",
    "path": "/loading",
  },
]
`;
